objects/RB_Reference__c.object
<CustomObject>
    <description>R8 Recurring business reference object</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + RB_ID__r.Account_Customer__c, RB_ID__r.Account_Customer__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAD__c</fullName>
        <description>Will hold the confidence level scheduled/ modified by the user in the RO preview table</description>
        <label>Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfill__c</fullName>
        <description>Yes/ No (If a RO is fulfilled/eaten up scope)</description>
        <label>Fulfilled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsAutoSyncEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutoSyncEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark reference records to be deleted on save configuration???</description>
        <label>Is Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Opportunity Number of related Opportunity</description>
        <label>Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_1__c</fullName>
        <description>JSON format to hold the first 1000 product lines</description>
        <label>Products 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_2__c</fullName>
        <label>Products 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RB_ID__c</fullName>
        <label>Recurring Business</label>
        <referenceTo>Recurring_Business__c</referenceTo>
        <relationshipLabel>RB References</relationshipLabel>
        <relationshipName>RB_Reference_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RB_Reference__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, RO_Name__c ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RB Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Type__c</fullName>
        <formula>RB_ID__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RB Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Custom_Name__c</fullName>
        <description>Added as part of RB-R3.0 to display the RO Name with related period information</description>
        <inlineHelpText>Displays RO Name with related period information</inlineHelpText>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_ID__c</fullName>
        <displayFormat>RO{0}</displayFormat>
        <label>RO ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RO_Name__c</fullName>
        <label>RO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cancellation__c</fullName>
        <label>Reason For Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <formula>RB_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isManualCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isManualCancelled</label>
        <type>Checkbox</type>
    </fields>
    <label>RB Reference</label>
    <nameField>
        <displayFormat>RBRef-{00000}</displayFormat>
        <label>RB Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RB References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>